@@ -893,6 +893,7 @@ OpenDoc_TRANSLATE_BOOKMARKREFS=Bookmark &references
 OpenDoc_TRANSLATE_NOTES=&Notes
 OpenDoc_TRANSLATE_COMMENTS=&Comments
 OpenDoc_TRANSLATE_PRES_NOTES=&Presentation notes
+OpenDoc_TRANSLATE_LINKS=Links (&URL)
 OpenDoc_ERROR_IN_FILE=Error in file
 
 # org.omegat.filters3.xml.openxml.OpenXMLFilter
