@@ -838,6 +838,7 @@ OpenDoc_TRANSLATE_BOOKMARKREFS=&R\u00e9f\u00e9rences aux signets
 OpenDoc_TRANSLATE_NOTES=&Notes
 OpenDoc_TRANSLATE_COMMENTS=&Commentaires
 OpenDoc_TRANSLATE_PRES_NOTES=Notes des &pr\u00e9sentations
+OpenDoc_TRANSLATE_LINKS=Liens (&URL)
 OpenDoc_ERROR_IN_FILE=Erreur dans le fichier
 
 # org.omegat.filters3.xml.openxml.OpenXMLFilter
